--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.6",
+    "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
     "autoprefixer": "10.4.14",
     "next": "13.4.9",
